rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-rollout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=Hello from BLUE"
        - "-listen=:80"
        ports:
        - containerPort: 80
  strategy:
    blueGreen:
      activeService: demo-service
      previewService: demo-preview
      autoPromotionEnabled: false
