demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector: {}    # MUST be empty so controller can manage selector
